src/index.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Hanken Grotesk", Arial, sans-serif;
  background-color: #262626;
  color: #D9D9D9;
  padding: 20px;
  height: 100vh;
  display: flex;
  justify-content: center;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 76px;
  margin-bottom: 20px;
}

header > h1 {
  font-size: 1.75rem;
  margin: 0;
  font-weight: 500;
  color: #F9F4DA;
}

header > p {
  font-size: 0.975rem;
  font-weight: 400;
  margin-top: 8px;
  color: #8e8e8e;
  max-width: 350px;
}

.status-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 6px;
  border-radius: 4px;
  margin-block: 30px;
}

.status-container > h1 {
  font-size: 1.25rem;
  margin: 0;
  font-weight: 400;
  color: #F9F4DA;
}

.status-container > h2 {
  font-size: 1rem;
  margin: 0;
  font-weight: 400;
  color: #F9F4DA;
}

.status-container.playing {
  margin-bottom: 80px;
}

.status-container.won {
  background-color: #10A95B;
}
  
.status-container.lost {
  background-color: #BA2A2A;
}

.language-list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap; 
  gap: 2.5px;
  max-width: 450px;
}

.language-item {
  border-radius: 3px;
  padding: 4.5px;
  font-weight: 700;
  position: relative;
}

.language-item.lost::before {
  content: "💀";
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  font-size: 0.85rem;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.7);
}

.word-container {
  display: flex;
  justify-content: center;
  gap: 2px;
  margin-top: 36px;
}

.letter-box {
  background-color: #323232;
  border-bottom: 1px solid #F9F4DA;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.125rem;
  font-weight: 700;
  color: #F9F4DA;
}

.keyboard {
  display: flex;
  flex-wrap: wrap;
  gap: 6px;
  justify-content: center;
  align-items: center;
  margin-top: 64px;
  max-width: 450px;
  margin-bottom: 36px;
}

.key-button {
  font-family: "Hanken Grotesk", Arial, sans-serif;
  display: flex;
  border: 1px solid #D7D7D7;
  border-radius: 4px;
  gap: 8px;
  margin-bottom: 6px;
  height: 40px;
  width: 40px;
  justify-content: center;
  align-items: center;
  font-weight: 600;
  background-color: #FCBA29;
  color: #1E1E1E;
  cursor: pointer;
}


button.new-game {
  font-family: "Hanken Grotesk", Arial, sans-serif;
  background-color: #11B5E5;
  border: 1px solid #D7D7D7;
  font-weight: 600;
  border-radius: 4px;
  width: 225px;
  height: 40px;
  padding: 6px 12px;
  display: block;
  margin-inline: auto;
  cursor: pointer;
}
  
.key-button.guessed-correct {
  background-color: #10A95B;
  color: #F9F4DA;
}

.key-button.guessed-wrong {
  background-color: #E53E3E;
  color: #F9F4DA;
}

